# AdagIO

./: CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.h  devicelist.cpp  devicelist.h  main.cpp  mydevice.cpp  mydevice.h  ntrip.cpp  ntrip.h
android/: AndroidManifest.xml
android/res/xml/: device_filter.xml
android/src/com/mycompany/mydevice/: CustomProber.java  Device.java  ListItem.java  SerialHelper.java
